迁移search模块 更新ai模块配置